--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ before_install:
     - sudo mv docker-compose /usr/local/bin
 
 script:  
+    - echo ${TRAVIS_COMMIT}
     - docker version
     - docker-compose version
     - ./run_tests
+
+#deploy to dockerhub( tag and push image)    
