--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ before_install:
     - sudo mv docker-compose /usr/local/bin
 
 script:  
-    - echo "SHould be travis commit ${TRAVIS_COMMIT}"
+    - echo SHould be travis commit ${TRAVIS_COMMIT}
     - docker version
     - docker-compose version
     - ./run_tests
 
+deploy:
 #deploy to dockerhub( tag and push image)    
