--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
     - sudo mv docker-compose /usr/local/bin
 
 script:  
-    - echo SHould be travis commit ${TRAVIS_COMMIT}
+    - echo SHould be travis build id ${TRAVIS_BUILD_ID}
     - docker version
     - docker-compose version
     - ./run_tests
