--- a/.travis.yml
+++ b/.travis.yml
@@ -26,12 +26,14 @@ script:
     - docker version
     - docker-compose version
     - ./run_tests
+    - ./go build
+    - ./go push
 
-deploy:
+# deploy:
     #tag docker image
     # use go script to build the image
     # use go script to push the image to docker
-    - ./go build
-    - ./go push
+    # - ./go build
+    # - ./go push
     #push docker image
 #deploy to dockerhub( tag and push image)    
